# rocket-reels-ai

./: .gitignore  CLAUDE.md  CLAUDE.md.save  CRAWL_STORAGE_SETUP.md  LANGGRAPH_TESTING.md  PROMPT_IMAGE_GENERATION.md  README.md  SEARCH_SETUP.md  SETUP_CLAUDE_DESKTOP.md  SUPABASE_OPERATIONS_SUMMARY.md  TAVILY_SEARCH_SUMMARY.md  agent.py  claude-desktop-config.json  debug_search.py  docker-compose.yml  enhanced_vector_store.py  hunyuan3d_debug_guide.md  langgraph.json  langgraph_minimal.json  pyproject.toml  requirements.txt  search_agent_analysis.md  setup_langgraph.sh  start.sh  tavily_format_test.py  tavily_search_format_analysis.md  test_graph_import.py  test_integrated_workflow.py  test_langgraph_workflow.py  test_news_workflow.py  test_recursion_fix.py  test_search_fixed.py  test_search_workflow.py  test_tavily_debug.py  test_voice_generation.py  test_workflow.py
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
config/: .env.template
core/: __init__.py  progress_tracker.py  workflow_interface.py
database_migrations/: create_prompts_tables.sql  create_video_tables.sql
langgraph/: agent1.py  crawl_agent.py  credentials.json  fix_gdrive_integration.py  gdrive_folders.json  gdrive_storage.py  gdrive_voice_storage.py  image_generation_agent.py  langgraph.json  prompt_generation_agent.py  scripting_agent.py  search_agent.py  supabase_agent.py  test_deduplication.py  test_orchestrator_chat.py  test_pexels_broll_search.py  test_together_fixed.py  test_voice_cloning.py  token.json  (+7 more)
(+106 files in other folders)
